--- a/lvglFileSystem/platformio.ini
+++ b/lvglFileSystem/platformio.ini
@@ -20,3 +20,4 @@ build_flags = -Iinclude/
     -DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 board_build.arduino.memory_type = qio_opi
+board_build.filesystem = littlefs
